# EdgeYOLO-ROS

./: .gitignore  README.md
edgeyolo_ros_cpp/edgeyolo_cpp/: CMakeLists.txt  package.xml
edgeyolo_ros_cpp/edgeyolo_cpp/include/edgeyolo_cpp/: coco_names.hpp  config.h.in  core.hpp  edgeyolo.hpp  edgeyolo_onnxruntime.hpp  edgeyolo_openvino.hpp  edgeyolo_tensorrt.hpp  edgeyolo_tflite.hpp  tensorrt_logging.h  utils.hpp
edgeyolo_ros_cpp/edgeyolo_cpp/src/: edgeyolo_onnxruntime.cpp  edgeyolo_openvino.cpp  edgeyolo_tensorrt.cpp  edgeyolo_tflite.cpp
edgeyolo_ros_cpp/edgeyolo_ros_cpp/: CMakeLists.txt  package.xml
edgeyolo_ros_cpp/edgeyolo_ros_cpp/include/edgeyolo_ros_cpp/: edgeyolo_ros_cpp.hpp
edgeyolo_ros_cpp/edgeyolo_ros_cpp/launch/: edgeyolo_onnxruntime.launch.py  edgeyolo_openvino.launch.py  edgeyolo_openvino_ncs2.launch.py  edgeyolo_tensorrt.launch.py  edgeyolo_tensorrt_jetson.launch.py  edgeyolo_tflite.launch.py
edgeyolo_ros_cpp/edgeyolo_ros_cpp/src/: edgeyolo_ros_cpp.cpp
edgeyolo_ros_py/: package.xml  setup.cfg  setup.py
edgeyolo_ros_py/edgeyolo_ros_py/: edgeyolo_onnx.py  edgeyolo_onnx_node.py  utils.py
edgeyolo_ros_py/launch/: edgeyolo_onnxruntime.launch.py
weights/: convert_onnx2trt.sh
